--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -21,8 +21,8 @@
         tools:layout="@layout/fragment_detail">
 
         <argument
-            android:name="selectedAsteroid"
-            app:argType="com.udacity.asteroidradar.api.models.Asteroid" />
+            android:name="selectedAsteroidId"
+            app:argType="string" />
     </fragment>
 
 </navigation>
