--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,17 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:fontFamily">@font/michroma</item>
+    </style>
+
+    <style name="titleText">
+        <item name="android:textColor">@color/default_text_color</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+
+    <style name="descriptionText" parent="titleText">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/text_grey</item>
     </style>
 
 </resources>
