--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -16,7 +16,7 @@
         android:background="@color/app_background">
 
         <ImageView
-            android:id="@+id/activity_main_image_of_the_day"
+            android:id="@+id/headerImage"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
@@ -29,10 +29,10 @@
         <ScrollView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:padding="16dp"
+            android:padding="@dimen/normal_spacing"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/activity_main_image_of_the_day">
+            app:layout_constraintTop_toBottomOf="@+id/headerImage">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -45,25 +45,25 @@
                     android:orientation="vertical">
 
                     <TextView
+                        style="@style/titleText"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="@string/close_approach_data_title"
-                        android:textColor="@color/default_text_color" />
+                        android:text="@string/close_approach_data_title" />
 
                     <TextView
-                        android:id="@+id/close_approach_date"
+                        android:id="@+id/closeApproachDate"
+                        style="@style/descriptionText"
+                        dateText="@{asteroid.closeApproachDate}"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="4dp"
-                        dateText="@{asteroid.closeApproachDate}"
-                        android:textColor="@color/default_text_color"
+                        android:layout_marginTop="@dimen/tiny_spacing"
                         tools:text="2020-02-01" />
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
+                    android:layout_marginTop="@dimen/normal_spacing"
                     android:gravity="center_vertical"
                     android:orientation="horizontal">
 
@@ -74,80 +74,81 @@
                         android:orientation="vertical">
 
                         <TextView
+                            style="@style/titleText"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="@string/absolute_magnitude_title"
                             android:textColor="@color/default_text_color" />
 
                         <TextView
-                            android:id="@+id/absolute_magnitude"
+                            android:id="@+id/absoluteMagnitude"
+                            style="@style/descriptionText"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="4dp"
-                            android:textColor="@color/default_text_color"
+                            android:layout_marginTop="@dimen/tiny_spacing"
                             app:astronomicalUnitText="@{asteroid.absoluteMagnitude}"
                             tools:text="25.126 au" />
                     </LinearLayout>
 
                     <ImageView
-                        android:id="@+id/help_button"
+                        android:id="@+id/helpButton"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:padding="16dp"
+                        android:contentDescription="@string/absolute_magnitude_button_description"
+                        android:padding="@dimen/normal_spacing"
                         app:srcCompat="@drawable/ic_help_circle" />
 
                 </LinearLayout>
 
                 <TextView
+                    style="@style/titleText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:text="@string/estimated_diameter_title"
-                    android:textColor="@color/default_text_color" />
+                    android:layout_marginTop="@dimen/normal_spacing"
+                    android:text="@string/estimated_diameter_title" />
 
                 <TextView
-                    android:id="@+id/estimated_diameter"
+                    android:id="@+id/estimatedDiameter"
+                    style="@style/descriptionText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="4dp"
-                    android:textColor="@color/default_text_color"
+                    android:layout_marginTop="@dimen/tiny_spacing"
                     app:kmUnitText="@{asteroid.estimatedDiameter}"
                     tools:text="0.82 km" />
 
                 <TextView
+                    style="@style/titleText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:text="@string/relative_velocity_title"
-                    android:textColor="@color/default_text_color" />
+                    android:layout_marginTop="@dimen/normal_spacing"
+                    android:text="@string/relative_velocity_title" />
 
                 <TextView
-                    android:id="@+id/relative_velocity"
+                    android:id="@+id/relativeVelocity"
+                    style="@style/descriptionText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="4dp"
-                    android:textColor="@color/default_text_color"
+                    android:layout_marginTop="@dimen/tiny_spacing"
                     app:velocityText="@{asteroid.relativeVelocity}"
                     tools:text="11.9 km/s" />
 
                 <TextView
+                    style="@style/titleText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:text="@string/distance_from_earth_title"
-                    android:textColor="@color/default_text_color" />
+                    android:layout_marginTop="@dimen/normal_spacing"
+                    android:text="@string/distance_from_earth_title" />
 
                 <TextView
-                    android:id="@+id/distance_from_earth"
+                    android:id="@+id/distanceFromEarth"
+                    style="@style/descriptionText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="4dp"
-                    android:textColor="@color/default_text_color"
+                    android:layout_marginTop="@dimen/tiny_spacing"
                     app:astronomicalUnitText="@{asteroid.distanceFromEarth}"
                     tools:text="0.0924 au" />
 
             </LinearLayout>
         </ScrollView>
-
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
