--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,5 +3,6 @@
     <dimen name="hazard_indicator_size">35dp</dimen>
     <dimen name="normal_spacing">16dp</dimen>
     <dimen name="small_spacing">8dp</dimen>
+    <dimen name="tiny_spacing">4dp</dimen>
     <dimen name="divider_height">2dp</dimen>
 </resources>
