--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -56,15 +56,34 @@
             app:layout_constraintTop_toBottomOf="@id/imageOfDayContainer"
             tools:listitem="@layout/item_asteroid" />
 
-        <ProgressBar
-            android:id="@+id/status_loading_wheel"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:id="@+id/emptyListWarningContainer"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:indeterminate="true"
-            android:visibility="gone"
+            android:orientation="vertical"
+            android:padding="@dimen/normal_spacing"
+            android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@id/imageOfDayContainer"
+            app:layout_constraintVertical_bias="0.1">
+
+            <TextView
+                android:id="@+id/emptyListLabel"
+                style="@style/titleText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/empty_list_text"
+                android:textAlignment="center" />
+
+            <ProgressBar
+                android:id="@+id/loadingProgressBar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="@dimen/double_spacing"
+                android:indeterminate="true"
+                android:visibility="visible" />
+        </LinearLayout>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
