--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,6 +2,7 @@
 <resources>
     <dimen name="hazard_indicator_size">35dp</dimen>
     <dimen name="normal_spacing">16dp</dimen>
+    <dimen name="double_spacing">32dp</dimen>
     <dimen name="small_spacing">8dp</dimen>
     <dimen name="tiny_spacing">4dp</dimen>
     <dimen name="divider_height">2dp</dimen>
